<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.khamlichi.droneremote.droneremotebluetooth.ClientActivity">

    <Button
        android:id="@+id/button_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp"
        android:onClick="onClickUp"
        android:text="@string/up" />

    <Button
        android:id="@+id/button_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_up"
        android:layout_centerHorizontal="true"
        android:onClick="onClickForward"
        android:text="@string/forward" />

    <Button
        android:id="@+id/button_turn_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_up"
        android:layout_toStartOf="@+id/button_up"
        android:onClick="onClickTurnLeft"
        android:text="@string/turnleft" />

    <Button
        android:id="@+id/button_turn_right"
        android:layout_width="86dp"
        android:layout_height="wrap_content"

        android:layout_below="@+id/button_up"
        android:layout_toEndOf="@+id/button_up"
        android:onClick="onClickTurnRight"
        android:text="@string/turnright" />

    <Button
        android:id="@+id/button_hover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_forward"
        android:layout_centerHorizontal="true"
        android:onClick="onClickHover"
        android:text="@string/hover" />

    <Button
        android:id="@+id/button_move_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_forward"
        android:layout_toStartOf="@+id/button_up"
        android:onClick="onClickMoveLeft"
        android:text="@string/mvleft" />

    <Button
        android:id="@+id/button_move_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_forward"
        android:layout_toEndOf="@+id/button_up"
        android:onClick="onClickMoveRight"
        android:text="@string/moveright" />

    <Button
        android:id="@+id/button_backward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_hover"
        android:layout_centerHorizontal="true"
        android:onClick="onClickBackward"
        android:text="@string/backward" />

    <Button
        android:id="@+id/button_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_backward"
        android:layout_centerHorizontal="true"
        android:onClick="onClickDown"
        android:text="@string/down" />

    <Button
        android:id="@+id/button_adjust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_take_off"
        android:layout_alignBottom="@+id/button_take_off"
        android:layout_toLeftOf="@+id/button_down"
        android:layout_toStartOf="@+id/button_down"
        android:onClick="onClickAdjust"
        android:text="@string/adjust" />

    <Button
        android:id="@+id/button_take_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_down"
        android:layout_centerHorizontal="true"
        android:onClick="onClickTakeOff"
        android:text="@string/takeoff" />

    <Button
        android:id="@+id/button_land"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_down"
        android:layout_toEndOf="@+id/button_up"
        android:onClick="onClickLand"
        android:text="@string/land" />

    <Button
        android:id="@+id/button_end"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_emergency"
        android:layout_toEndOf="@+id/button_adjust"
        android:layout_toRightOf="@+id/button_adjust"
        android:onClick="onClickEnd"
        android:text="@string/end" />

    <Button
        android:id="@+id/button_emergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:onClick="onClickEmergency"
        android:text="@string/emergency" />

    <TextView
        android:id="@+id/tv_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/waiting_wifi"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_emergency"
        android:layout_alignBottom="@+id/button_emergency"
        android:layout_alignParentEnd="true"
        android:onClick="onClickFollow"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/follow_me" />

</RelativeLayout>
